[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/defaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/UI/Sound Panel.gd" type="Script" id=2]

[node name="Sound Panel" type="Panel"]
anchor_top = 0.735
anchor_right = 0.996
anchor_bottom = 0.829
margin_left = 11.0
margin_top = -43.95
margin_right = -109.104
margin_bottom = -11.93
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = 20.0
margin_top = 2.0
margin_right = 81.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Sound Settings"

[node name="SFX" type="Label" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 30.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SFX:"

[node name="SFX_Slider" type="HSlider" parent="SFX"]
margin_left = 22.0
margin_top = -2.0
margin_right = 88.0
margin_bottom = 14.0
min_value = -80.0
max_value = 0.0
value = -60.0
tick_count = 1

[node name="Music" type="Label" parent="."]
margin_top = 31.0
margin_right = 30.0
margin_bottom = 43.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Music:"

[node name="Music_Slider" type="HSlider" parent="Music"]
margin_left = 30.0
margin_top = -1.0
margin_right = 96.0
margin_bottom = 15.0
min_value = -80.0
max_value = 0.0
value = -60.0
tick_count = 1

[connection signal="value_changed" from="SFX/SFX_Slider" to="." method="_on_SFX_Slider_value_changed"]
[connection signal="value_changed" from="Music/Music_Slider" to="." method="_on_Music_Slider_value_changed"]
